--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
   <link rel="stylesheet" href="lib/materialize/css/materialize.min.css">
   <link rel="stylesheet" href="css/style.css" />
   <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/vue/vue.js"></script>
-  <script defer src="lib/materialize/js/materialize.min.js"></script>
+  <script src="lib/vue/vue.min.js"></script>
 </head>
 
 <body class="center jks">
