--- a/me/index.html
+++ b/me/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="1; URL=https://github.com/bethropolis" />
+    <meta http-equiv="refresh" content="1; URL=https://bethropolis.github.io/" />
     <title>bethropolis</title>
 </head>
 <body>
