--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <li><code>swipe-up</code> to like</li>
           <li><code>swipe-left</code> go to previous entry</li>
           <li><code>swipe-right</code> go to next entry</li>
-          <li><code>swip-down</code> to fetch new jokes</li>
+          <li><code>swip-down</code> to toggle this popup</li>
         </div>
         <div v-show="!device && view" class="left-align">
           <li><code>top-arrow-key/space</code> to like</li>
