--- a/index.html
+++ b/index.html
@@ -82,14 +82,32 @@
         </div>
         <div v-show="!view" class="">
           <div class="input-field left-align">
-            <select class="options" value="hello world" multiple>
-              <option value="all" disabled>all</option>
-              <option value="pun">pun</option>
-              <option value="Programming">Programming</option>
-              <option value="Miscellaneous">Miscellaneous</option>
-              <option value="Spooky">Spooky</option>
-              <option value="Dark">Dark</option>
-            </select>
+            <form action="#">
+              <p>
+                <label>
+                  <input name="group1" type="radio" checked />
+                  <span>Red</span>
+                </label>
+              </p>
+              <p>
+                <label>
+                  <input name="group1" type="radio" />
+                  <span>Yellow</span>
+                </label>
+              </p>
+              <p>
+                <label>
+                  <input class="with-gap" name="group1" type="radio"  />
+                  <span>Green</span>
+                </label>
+              </p>
+              <p>
+                <label>
+                  <input name="group1" type="radio" disabled="disabled" />
+                  <span>Brown</span>
+                </label>
+              </p>
+            </form>
             <label>select your preferred joke</label>
           
           <button class="btn waves-effect light-blue waves-light" @click="setFunc" type="submit">set
