--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <div v-show="!view" class="">
           <div class="input-field left-align">
-            <form action="#">
+            <!-- <form action="#">
               <p>
                 <label>
                   <input name="group1" type="radio" checked />
@@ -107,7 +107,7 @@
                   <span>Brown</span>
                 </label>
               </p>
-            </form>
+            </form> -->
             <label>select your preferred joke</label>
           
           <button class="btn waves-effect light-blue waves-light" @click="setFunc" type="submit">set
