--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                 <span>Dark</span>
               </label>
             </p>
-            </form><br>
+            </form>
+            <p class="red-text"><span class="bold accent-4">*</span>some of this jokes may contain explicit, racist, political, religious and sexist content.</p>
           </div>
           <br>
           <div class="clear">
