--- a/index.html
+++ b/index.html
@@ -147,11 +147,10 @@
           </div>
         </div>
         </p>
-        <div class="row" v-show="view">
+        <div v-show="view">
           <a href="https://github.com/bethropolis/jokes-app/"><button
-              class="btn black darken-2 waves-effect tooltipped waves-ligh z-depth-1 text-white" data-tooltip="download source code on github">Github</button></a>
-          <a href="https://bethropolis.github.io/">
-            <button class="btn light-blue z-depth-1 waves-effect tooltipped  waves-ligh" data-tooltip="check my profile for more projects">More projects</button></a>
+              class="btn black darken-2 waves-effect tooltipped waves-ligh z-depth-1 text-white" data-tooltip="download source code on github">Github</button></a><br><br>
+              <a href="https://www.producthunt.com/posts/jokes-to-like?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-jokes&#0045;to&#0045;like" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=338656&theme=light" alt="Jokes&#0032;to&#0032;Like - A&#0032;good&#0032;laugh&#0032;at&#0032;the&#0032;jokes&#0032;you&#0032;like | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
         </div>
         <span class="red-text" id="cls1"></span>
       </div>
