--- a/index.html
+++ b/index.html
@@ -156,21 +156,21 @@
       </div>
     </div>
     <nav>
-      <div class="nav-wrapper jks">
+      <div class="nav-wrapper logo jks">
         <a href="#" class="caption user brand-logo logo text0-accent-4 left" @click.prevent="window.location.reload()"
           title="jokes to like">J<span class="red-text">T</span>L</a>
         <ul id="nav-mobile" class="right">
-          <li><a href="#" v-if="likedSwitch" class="left" @click.prevent="loadJokes">jokes</a></li>
+          <li><a href="#" v-if="likedSwitch" class="left tooltipped" @click.prevent="loadJokes" data-tooltip="go back to feed">jokes</a></li>
           <li>
-            <a href="#" v-if="!likedSwitch" @click.prevent="loadLiked" title="liked jokes"><i
+            <a href="#" v-if="!likedSwitch" @click.prevent="loadLiked" class="tooltipped" data-tooltip="liked jokes"><i
                 class="material-icons">favorite</i></a>
           </li>
           <li>
-            <a href="#" v-if="!likedSwitch" @click.prevent="settings" title="liked jokes"><i
+            <a href="#" v-if="!likedSwitch" @click.prevent="settings" class="tooltipped" data-tooltip="edit your settings"><i
                 class="material-icons">settings</i></a>
           </li>
           <li>
-            <a href="#" @click.prevent="share" title="share joke to friends"><i class="material-icons">share</i></a>
+            <a href="#" @click.prevent="share" class="tooltipped" data-tooltip="share joke to friends"><i class="material-icons">share</i></a>
           </li>
         </ul>
       </div>
